# sre_bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: bot_types.py  indexer.py  jira_retriever.py  main.py  searcher.py  updater.py
